Inset with depth and offset relative has weird geometry and assert crash #71971

Closed
opened 2019-11-27 12:32:14 +01:00 by Anthony Edlin · 10 comments

System Information
Operating system: Linux-5.3.0-20-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.26

Blender Version
Broken: version: 2.82 (sub 1), branch: master (modified), commit date: 2019-11-26 05:28, hash: 75e85f1c9f
Worked: (optional)

Short description of error
Delete default cube and add a grid.
Go into edit mode and select 4 faces to make a square selection. (Note it doesn't crash if you select a single face or a line of faces)
Do an inset.
Open properties and check Offset Relative. inset_working.png
Now adjust Depth.inset_with_offset_relative_and_depth.png

In 2.81 I get weird geometry as pictured, but in my master debug build it crashes with an assert. See attached backtrace.

**System Information** Operating system: Linux-5.3.0-20-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.26 **Blender Version** Broken: version: 2.82 (sub 1), branch: master (modified), commit date: 2019-11-26 05:28, hash: `75e85f1c9f` Worked: (optional) **Short description of error** Delete default cube and add a grid. Go into edit mode and select 4 faces to make a square selection. (Note it doesn't crash if you select a single face or a line of faces) Do an inset. Open properties and check Offset Relative. ![inset_working.png](https://archive.blender.org/developer/F8172050/inset_working.png) Now adjust Depth.![inset_with_offset_relative_and_depth.png](https://archive.blender.org/developer/F8172053/inset_with_offset_relative_and_depth.png) In 2.81 I get weird geometry as pictured, but in my master debug build it crashes with an assert. See attached backtrace.
Author

Added subscriber: @AnthonyEdlin

Added subscriber: @AnthonyEdlin
Author

Backtrace:

- 0  0x00007fffef36de97 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
- 1  0x00007fffef36f801 in __GI_abort () at abort.c:79
- 2  0x0000555558d72f5d in bm_edge_info_average_length (v=0x7fff8b0c9b28, edge_info=0x7fff8db6b838) at /home/krash/src/blender/src/source/blender/bmesh/operators/bmo_inset.c:515
- 3  0x0000555558d7bdfc in bmo_inset_region_exec (bm=0x7fff8e4b8638, op=0x7fffffffcca0) at /home/krash/src/blender/src/source/blender/bmesh/operators/bmo_inset.c:1210
- 4  0x0000555558cc50ba in BMO_op_exec (bm=0x7fff8e4b8638, op=0x7fffffffcca0) at /home/krash/src/blender/src/source/blender/bmesh/intern/bmesh_operators.c:223
- 5  0x000055555913c874 in edbm_inset_calc (op=0x7fffae80f738) at /home/krash/src/blender/src/source/blender/editors/mesh/editmesh_inset.c:296
- 6  0x000055555913c9db in edbm_inset_exec (C=0x7fffce496638, op=0x7fffae80f738) at /home/krash/src/blender/src/source/blender/editors/mesh/editmesh_inset.c:326
- 7  0x0000555558949556 in wm_operator_exec (C=0x7fffce496638, op=0x7fffae80f738, repeat=true, store=true) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:1057
- 8  0x0000555558949825 in WM_operator_repeat (C=0x7fffce496638, op=0x7fffae80f738) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:1133
- 9  0x0000555559386815 in ED_undo_operator_repeat (C=0x7fffce496638, op=0x7fffae80f738) at /home/krash/src/blender/src/source/blender/editors/undo/ed_undo.c:576
- 10 0x0000555559386963 in ED_undo_operator_repeat_cb_evt (C=0x7fffce496638, arg_op=0x7fffae80f738, UNUSED_arg_event=0) at /home/krash/src/blender/src/source/blender/editors/undo/ed_undo.c:610
- 11 0x000055555945492a in ui_apply_but_funcs_after (C=0x7fffce496638) at /home/krash/src/blender/src/source/blender/editors/interface/interface_handlers.c:903
- 12 0x000055555946efba in ui_region_handler (C=0x7fffce496638, event=0x7fff8e8fa4b8, UNUSED_userdata=0x0) at /home/krash/src/blender/src/source/blender/editors/interface/interface_handlers.c:10552
- 13 0x000055555894840d in wm_handler_ui_call (C=0x7fffce496638, handler=0x7fff8d64e558, event=0x7fff8e8fa4b8, always_pass=0) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:624
- 14 0x000055555894dd53 in wm_handlers_do_intern (C=0x7fffce496638, event=0x7fff8e8fa4b8, handlers=0x7fffc6fc3380) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:2747
- 15 0x000055555894eb28 in wm_handlers_do (C=0x7fffce496638, event=0x7fff8e8fa4b8, handlers=0x7fffc6fc3380) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:2993
- 16 0x0000555558950136 in wm_event_do_handlers (C=0x7fffce496638) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:3446
- 17 0x000055555894258f in WM_main (C=0x7fffce496638) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm.c:417
#18 0x0000555558313809 in main (argc=2, argv=0x7fffffffdc68) at /home/krash/src/blender/src/source/creator/creator.c:496
Backtrace: ``` - 0 0x00007fffef36de97 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 - 1 0x00007fffef36f801 in __GI_abort () at abort.c:79 - 2 0x0000555558d72f5d in bm_edge_info_average_length (v=0x7fff8b0c9b28, edge_info=0x7fff8db6b838) at /home/krash/src/blender/src/source/blender/bmesh/operators/bmo_inset.c:515 - 3 0x0000555558d7bdfc in bmo_inset_region_exec (bm=0x7fff8e4b8638, op=0x7fffffffcca0) at /home/krash/src/blender/src/source/blender/bmesh/operators/bmo_inset.c:1210 - 4 0x0000555558cc50ba in BMO_op_exec (bm=0x7fff8e4b8638, op=0x7fffffffcca0) at /home/krash/src/blender/src/source/blender/bmesh/intern/bmesh_operators.c:223 - 5 0x000055555913c874 in edbm_inset_calc (op=0x7fffae80f738) at /home/krash/src/blender/src/source/blender/editors/mesh/editmesh_inset.c:296 - 6 0x000055555913c9db in edbm_inset_exec (C=0x7fffce496638, op=0x7fffae80f738) at /home/krash/src/blender/src/source/blender/editors/mesh/editmesh_inset.c:326 - 7 0x0000555558949556 in wm_operator_exec (C=0x7fffce496638, op=0x7fffae80f738, repeat=true, store=true) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:1057 - 8 0x0000555558949825 in WM_operator_repeat (C=0x7fffce496638, op=0x7fffae80f738) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:1133 - 9 0x0000555559386815 in ED_undo_operator_repeat (C=0x7fffce496638, op=0x7fffae80f738) at /home/krash/src/blender/src/source/blender/editors/undo/ed_undo.c:576 - 10 0x0000555559386963 in ED_undo_operator_repeat_cb_evt (C=0x7fffce496638, arg_op=0x7fffae80f738, UNUSED_arg_event=0) at /home/krash/src/blender/src/source/blender/editors/undo/ed_undo.c:610 - 11 0x000055555945492a in ui_apply_but_funcs_after (C=0x7fffce496638) at /home/krash/src/blender/src/source/blender/editors/interface/interface_handlers.c:903 - 12 0x000055555946efba in ui_region_handler (C=0x7fffce496638, event=0x7fff8e8fa4b8, UNUSED_userdata=0x0) at /home/krash/src/blender/src/source/blender/editors/interface/interface_handlers.c:10552 - 13 0x000055555894840d in wm_handler_ui_call (C=0x7fffce496638, handler=0x7fff8d64e558, event=0x7fff8e8fa4b8, always_pass=0) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:624 - 14 0x000055555894dd53 in wm_handlers_do_intern (C=0x7fffce496638, event=0x7fff8e8fa4b8, handlers=0x7fffc6fc3380) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:2747 - 15 0x000055555894eb28 in wm_handlers_do (C=0x7fffce496638, event=0x7fff8e8fa4b8, handlers=0x7fffc6fc3380) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:2993 - 16 0x0000555558950136 in wm_event_do_handlers (C=0x7fffce496638) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm_event_system.c:3446 - 17 0x000055555894258f in WM_main (C=0x7fffce496638) at /home/krash/src/blender/src/source/blender/windowmanager/intern/wm.c:417 #18 0x0000555558313809 in main (argc=2, argv=0x7fffffffdc68) at /home/krash/src/blender/src/source/creator/creator.c:496 ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou
Member

I'm not sure I'm doing the steps correctly but I can't reproduce the crash. I added this test case to D5357 (test currently passes with thickness = 0.4 and use_relative_offset set to True)

I'm not sure I'm doing the steps correctly but I can't reproduce the crash. I added this test case to [D5357](https://archive.blender.org/developer/D5357) (test currently passes with thickness = 0.4 and `use_relative_offset` set to `True`)

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I can confirm on a5f19e3f72 :

BLI_assert failed: /home/sybren/workspace/blender-git/blender/source/blender/bmesh/operators/bmo_inset.c:515, bm_edge_info_average_length(), at 'tot != 0'
/home/sybren/workspace/blender-git/blender/source/blender/bmesh/operators/bmo_inset.c:516:14: runtime error: division by zero
I can confirm on a5f19e3f72 : ``` BLI_assert failed: /home/sybren/workspace/blender-git/blender/source/blender/bmesh/operators/bmo_inset.c:515, bm_edge_info_average_length(), at 'tot != 0' /home/sybren/workspace/blender-git/blender/source/blender/bmesh/operators/bmo_inset.c:516:14: runtime error: division by zero ```

This issue was referenced by 9fef5a2db4

This issue was referenced by 9fef5a2db43b7146c8c734fe15232c30fda3f796

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-14 10:48:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71971
No description provided.