Fix T71971: Inset with depth and relative offset fails